--- a/css/global.css
+++ b/css/global.css
@@ -132,6 +132,12 @@ th, td {
     font-size: 14px;
 }
 
+table th {
+    font-size: 10px !important;
+    padding: 6px !important;
+}
+
+
 /* BOTÕES GLOBAIS */
 button,
 .btn-primario {
