--- a/css/global.css
+++ b/css/global.css
@@ -372,3 +372,11 @@ table th {
     white-space: nowrap;
 }
 
+#tabela-dashboard th,
+#tabela-dashboard td {
+    padding: 8px;
+    font-size: 13px;
+    border-bottom: 1px solid #ddd;
+    white-space: nowrap;
+}
+
