--- a/css/global.css
+++ b/css/global.css
@@ -493,3 +493,10 @@ table th {
     opacity: 0.4;
 }
 
+.linha-checkbox {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    margin-top: 15px;
+}
+
